--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,12 +1,12 @@
 #Minecraft server properties
 #Sun Aug 31 01:29:39 UTC 2025
 accepts-transfers=false
-allow-flight=false
+allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -59,5 +59,5 @@ sync-chunk-writes=true
 text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
-view-distance=10
+view-distance=15
 white-list=false
